fix margin-bottom collapse

--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -2,10 +2,11 @@
 
 .collapse {
     background-color: $color-tertiary;
-    max-width: 1100px;
+    max-width: 1023px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     margin: 0 auto;
+    margin-bottom: 43px;
     &_title{
         @include flex(row, space-between, center);
         background-color: $color-secondary;
